# svnit-archives

./: .gitmodules
sem-3/co-lab/lab-1/: a.out  binaryToDecimal  binaryToDecimal.c  decimalToBinary  decimalToBinary.c  factorial  factorial.c  main.c  test.c  util.h
sem-3/co-lab/lab-2/: main.c  q1-alternate.c  q1.c  q2.c  q3.c  q4.c  q5.c  q6.c  test.c  util.h
sem-3/co-lab/lab-3/: addition.h  booth.h  division.c  division.h  multiplication.c  test.c  util.h
sem-3/co-lab/lab-4/: full-adder.circ  full-subtracter.circ  half-adder.circ  half-subtracter.circ
sem-3/co-lab/lab-5/: 1-4-2-encoder.circ  2-3-8-decoder.circ  3-comparator.circ  4-alu.circ  5-and.circ  6-8x1-multiplexer.circ  7-1x4-demux.circ  8-4x1.circ
sem-3/co-lab/lab-6/: adder.circ  divider.circ  multiplier.circ  subtractor.circ
sem-3/co-lab/lab-7/: q1.circ  q2.circ
sem-3/co-lab/lab-8/: q1.circ  q2.circ  q3.circ  q4.circ
sem-3/co-lab/lab-9/: q1.circ
sem-3/computer-organisation/introduction/: divide-args.c
sem-3/computer-organisation/patterson/: 1-computer-abstractions-and-technology.md
sem-3/dsa-algs/hash-table/: a.out  hash-table.h  main.c
sem-3/dsa-algs/sorts/: a.out  main.c  sorts.h
sem-3/dsa-algs/stack/: a.out  infix-postfix.c  stack.c
sem-3/dsa-lab/lab-assignment-1/: a.out  q1.c  q2.c  q3.c  q4.c
sem-3/dsa-lab/lab-assignment-2/: a.out  main.c  q1  q1.c  q10  q10.c  q11  q11.c  q12  q12.c  q13  q13.c  q14  q14.c  q15  q15.c  q16  q16.c  q17  q17.c  q2  q2.c  q3  q3.c  q4  q4.c  q5  q5.c  q6  q6.c  q7  q7.c  q8  q8.c  q9  q9.c  string.h
sem-3/dsa-lab/lab-assignment-3/: a.out  main.c  util.h
sem-3/dsa-lab/lab-assignment-4/: a.out  evaluate-postfix  evaluate-postfix.c  infix-to-postfix  infix-to-postfix.c  test.c  util.h
sem-3/dsa-lab/lab-assignment-5/: a.out  circular-doubly-linked-list.c  circular-doubly-linked-list.h  circular-singly-linked-list.c  circular-singly-linked-list.h  linear-doubly-linked-list.c  linear-doubly-linked-list.h  linear-singly-linked-list.c  linear-singly-linked-list.h  ordered-singly-linked-list.c  ordered-singly-linked-list.h  test.c  util.h
sem-3/dsa-lab/lab-assignment-6/: a.out  q1.c  q1.h  q2.c  q2.h  q3.c  q3.h  q4.c  q4.h  q5.c  q5.h
sem-3/dsa-lab/lab-assignment-7/: a.out  q1.c  q1.h
sem-3/dsa-lab/lab-assignment-8/: a.out  q1.c  q1.h
sem-3/software-tools-lab/lab-assignment-1/: index.html
sem-3/software-tools-lab/lab-assignment-2/: cv.html  divcv.html  table.html
sem-3/software-tools-lab/lab-assignment-3/: calendar-aemie.html  calendar.html
sem-3/software-tools-lab/lab-assignment-4/: q1.html  q2.html  q3.html  q4.html  style.css
sem-3/software-tools-lab/lab-assignment-5/: index.html  style.css
sem-3/software-tools-lab/lab-assignment-6/: index.html  main.html
sem-3/software-tools-lab/lab-assignment-7/: index.html  style.css
sem-3/software-tools-lab/st-6/: q1-a.html  q1-b.html  q1-c.html  q1-c.js  q2.html  q3.html  q4-a.html  q4-b.html  q4-c.html  q5.html  q6.html  q7.html  q8.html
sem-3/software-tools-lab/st-7/: q1.html  q1.js  q2.html  q2.js  q3.html  q3.js
sem-3/software-tools-lab/st-8/: index.html  script.js  style.css
sem-4/dbms/lab-2/: assignment-2.docx  dbms-connection.sql  solutions.sql
sem-4/dbms/lab-3/: Assignment-3.docx  create-table.sql  insert-data.sql  queries.sql
sem-4/dbms/lab-4/: create-table.sql  queries.sql
sem-4/dbms/lockdown-lab-1/: insert-data.sql  queries.sql
sem-4/dbms/lockdown-lab-3/: insert-data.sql  queries.sql
sem-4/dbms/lockdown-lab-4/: q1.sql  q2.sql  q3.sql  q4.sql  q5.sql  q6.sql
sem-4/dbms/lockdown-lab-5/: create-table.sql  q1.sql  q2.sql  q3.sql  q4.sql
sem-4/dbms/lockdown-lab-6/: create-table.sql  q1.sql  q2.sql  q3.sql  q4.sql
sem-4/dbms/lockdown-lab-7/: create-table.sql  insert-values.sql  q1.sql  q2.sql
sem-4/ec/lab-1/: code.md  notes.docx  q1.asv  q1.m  q2.asv  q2.m  q3.asv  q3.m
sem-5/mit-lab/: setup
sem-5/st-lab/: deploy
sem-6/cg/: Dockerfile  build.sh  display.sh  kill.sh
sem-6/cg-project/: Makefile  README.md  main.cpp
sem-6/cg/libgraph-1.0.2/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  graphics.h  grc  grtext.h  guile-libgraph.c  libgraph.c  libgraph.scm  pcgen.sh  polygon.c  polygon.h  sample.c  shapes.c  shapes.h  text.c
sem-6/cg/libgraph-1.0.2/doc/: Bugs.html  COPYING.html  Credits.html  Developer.html  Function_List.html  Introduction.html  Makefile.in  index.html
sem-6/cg/libgraph-1.0.2/doc/man/: Makefile.am  Makefile.in  arc.3  bar.3  bar3d.3  circle.3  cleardevice.3  closegraph.3  delay.3  detectgraph.3  drawpoly.3  ellipse.3  fillellipse.3  fillpoly.3  floodfill.3  genellipse.3  getarccoords.3  getbkcolor.3  getch.3  getche.3  getcolor.3  getdrivername.3  getfontcolor.3  getgraphmode.3  getlinesettings.3  getmaxcolor.3  getmaxmode.3  getmaxx.3  getmaxy.3  getmodename.3  getmoderange.3  getpixel.3  getx.3  gety.3  graphicstext.3  grc.1  grconstants.7  initgraph.3  kbhit.3  libgraph.7  (+18 more)
sem-6/ss/: Pipfile
sem-6/st/: .gitignore
sem-7/se/: spin_setup.py
(+801 files in other folders)
