# Process this file with autoconf to produce a configure script.
AC_INIT(libgraph, 1.0.2, faraz_ms@rediffmail.com)

dnl Check system type
AC_CANONICAL_TARGET

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE("libgraph", "1.0.2")
AM_MAINTAINER_MODE

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL
AC_PROG_AWK

# Checks for libraries.
dnl Check for SDL
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION,
            :,
	        AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)
CFLAGS="$CFLAGS $SDL_CFLAGS"
LIBS="$SDL_LIBS $LIBS"
AC_MSG_CHECKING([SDL  ==>  SDL_image library])
IMG_LIB="-lSDL_image"


dnl check for SDL_image
AC_EGREP_HEADER("SDL_image", SDL/SDL_image.h, sdl_image=yes, sdl_image=no) 
if test $sdl_image = yes; then
	LIBS="$IMG_LIB $LIBS"
	AC_MSG_RESULT([SDL_image = yes])
else
	AC_MSG_ERROR([*** SDL_image not found])
fi



AC_ARG_ENABLE(guile, [  --disable-guile	Do not compile support for Guile loadable modules], 
 , enable_guile=yes)

AM_CONDITIONAL(GUILE, test x$enable_guile = xyes)


AC_ARG_ENABLE(pkgconfig, [  --disable-pkgconfig	Do not compile support for pkg-config], 
 , enable_pkgconfig=yes)

AM_CONDITIONAL(PKGCONFIG, test x$enable_pkgconfig = xyes)


if test "x$enable_guile" = "xyes" ; then

dnl check for guile
AC_DEFUN([GUILE_FLAGS],[
## The GUILE_FLAGS macro.
  ## First, let's just see if we can find Guile at all.
  AC_MSG_CHECKING(for Guile)
  guile-config link > /dev/null || {
    echo "configure: cannot find guile-config; is Guile installed?" 1>&2
    exit 1
  }
  GUILE_CFLAGS="`guile-config compile`"
  GUILE_LDFLAGS="`guile-config link`"
  GUILE_DATADIR="`guile-config info pkgdatadir`"
  AC_SUBST(GUILE_CFLAGS)
  AC_SUBST(GUILE_LDFLAGS)
  AC_SUBST(GUILE_DATADIR)
  AC_MSG_RESULT(yes)
])

GUILE_FLAGS
if test "`guile -c '(display (string>=? (version) "1.4.1"))'`" != "#t"; then
  AC_MSG_ERROR([Your Guile is too old.  You need CVS Guile January 2001 or later.])
fi

fi  dnl check for guile ends

dnl Check for libm
AC_CHECK_LIB(m, rint)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h termios.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([atexit putenv rint strdup])

AC_OUTPUT(doc/Makefile doc/man/Makefile	Makefile)
