man_MANS = arc.3 getarccoords.3   getx.3       pieslice.3             bar.3             getbkcolor.3     gety.3       putpixel.3            bar3d.3             getch.3          initgraph.3  rectangle.3           circle.3          getche.3         kbhit.3      restorecrtmode.3      cleardevice.3     getcolor.3       line.3       sector.3             getdrivername.3  linerel.3    setbkcolor.3          closegraph.3      getfontcolor.3   lineto.3     setcolor.3            delay.3           getgraphmode.3   setfontcolor.3   detectgraph.3     getmaxcolor.3    setgraphmode.3    drawpoly.3        getmaxmode.3     textheight.3     ellipse.3         getmaxx.3        textwidth.3       fillellipse.3     getmaxy.3        moverel.3    fillpoly.3            getmodename.3    moveto.3          floodfill.3       getmoderange.3   outtext.3        getpixel.3       outtextxy.3		libgraph.7		grconstants.7 		grc.1     graphicstext.3 	genellipse.3	setlinestyle.3	getlinesettings.3

EXTRA_DIST = $(man_MANS)
